--- a/Loan_Application_Status_Final_Best_Model_Random_Forest_Classifier.ipynb
+++ b/Loan_Application_Status_Final_Best_Model_Random_Forest_Classifier.ipynb
@@ -4973,7 +4973,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Handling class imbalance problem by Oversampling the minority class"
+    "### Class Imbalance Correction"
    ]
   },
   {
